consul-config/k8s-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-gateway
  namespace: consul
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080}]'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: "200,404"
    external-dns.alpha.kubernetes.io/hostname: buymeadoor.pp.ua
spec:
  rules:
    - host: buymeadoor.pp.ua
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-gateway
                port:
                  number: 8080
